# zsh_alias_tips

./: .gitignore  Cargo.toml  LICENSE  README.md  zsh-alias-tips.plugin.zsh
src/: lib.rs  main.rs
